# python-img2table

./: .env.example  Makefile  README.md  pyproject.toml
src/: app.py  config.py  convert.py
