[project]
name = "python-img2table"
version = "0.1.0"
description = ""
authors = [
    {name = "rayhankinan",email = "rayhankinan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "img2table[gcp] (>=1.4.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
